<resources>
    <string name="app_name">Hello World</string>
    <!--TextView-->
    <string name="btn_textView">TextView</string>
    <string name="tv_test">社会我泉哥</string>
    <string name="tv_test2">筛选</string>
    <string name="tv_test3">社会我泉哥社会我泉哥社会我泉哥社会我泉哥社会我泉哥社会我泉哥社会我泉哥社会我泉哥</string>
    <!--Button-->
    <string name="btn_button">Button</string>
    <string name="btn_test">按 钮</string>
    <!--EditText-->
    <string name="btn_editText">EditText</string>
    <string name="et_username">用户名</string>
    <string name="et_password">密 码</string>
    <string name="btn_login">登 录</string>
    <!--RadioButton-->
    <string name="btn_radioButton">RadioButton</string>
    <string name="rb_man">男</string>
    <string name="rb_woman">女</string>
    <!--CheckBox-->
    <string name="btn_checkBox">CheckBox</string>
    <string name="tv_skill">移动端开发技能:</string>
    <string name="cb_android">Android</string>
    <string name="cb_ios">IOS</string>
    <string name="cb_h5">H5</string>
    <!--ImageView-->
    <string name="btn_imageView">ImageView</string>
    <!--ListView-->
    <string name="btn_listView">ListView</string>
    <string name="lv_title">这是标题</string>
    <string name="lv_time">这是时间</string>
    <string name="lv_content">这是内容</string>
    <!--GridView-->
    <string name="btn_gridView">GridView</string>
    <string name="tv_flower">花</string>
    <!--RecyclerView-->
    <string name="btn_verticalRecyclerView">VerticalRecyclerView</string>
    <string name="btn_horizontalRecyclerView">HorizontalRecyclerView</string>
    <string name="btn_gridRecyclerView">GridRecyclerView</string>
    <string name="btn_staggeredRecyclerView">StaggeredRecyclerView</string>
    <!--WebView-->
    <string name="btn_webView">WebView</string>
    <!--Toast-->
    <string name="btn_toast">Toast</string>
    <string name="btn_toast_1">默认</string>
    <string name="btn_toast_2">改变位置</string>
    <string name="btn_toast_3">自定义</string>
    <!--AlertDialog-->
    <string name="btn_dialog">Dialog</string>
    <string name="btn_dialog_1">默认</string>
    <string name="btn_dialog_2">单选1</string>
    <string name="btn_dialog_3">单选2</string>
    <string name="btn_dialog_4">多选</string>
    <string name="btn_dialog_5">自定义</string>
    <!--Fragment-->
    <string name="btn_fragment">Fragment</string>
    <string name="btn_message">传递消息</string>
    <string name="btn_change_b">切换BFragment</string>
    <string name="btn_change_tv">替换文本</string>
    <string name="tv_frag_a">我是AFragment</string>
    <string name="tv_frag_b">我是BFragment</string>
    <!--Jetpack-->
    <string name="btn_mvvm">MVVM</string>
    <string name="btn_like">Like</string>
    <string name="btn_dislike">Dislike</string>
</resources>
