<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        tools:context=".view.DialogActivity">

    <Button
            android:id="@+id/btn_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_1"/>

    <Button
            android:id="@+id/btn_dialog_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_dialog_2"
            app:layout_constraintTop_toBottomOf="@id/btn_dialog_1"/>

    <Button
            android:id="@+id/btn_dialog_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_dialog_3"
            app:layout_constraintTop_toBottomOf="@id/btn_dialog_2"/>

    <Button
            android:id="@+id/btn_dialog_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_dialog_4"
            app:layout_constraintTop_toBottomOf="@id/btn_dialog_3"/>

    <Button
            android:id="@+id/btn_dialog_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_dialog_5"
            app:layout_constraintTop_toBottomOf="@id/btn_dialog_4"/>


</androidx.constraintlayout.widget.ConstraintLayout>