<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".fragment.AFragment">

    <Button
            android:id="@+id/btn_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_message"
            android:textAllCaps="false"/>

    <Button
            android:id="@+id/btn_change_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_b"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/btn_message"/>

    <Button
            android:id="@+id/btn_change_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_change_tv"
            app:layout_constraintTop_toBottomOf="@id/btn_change_b"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btn_change_tv"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/tv_frag_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_frag_a"
                android:textSize="20sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>