<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:context=".view.CheckBoxActivity">

    <TextView android:id="@+id/tv_skill"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/tv_skill"
              android:textSize="16sp"
              android:textColor="#000"/>

    <CheckBox android:id="@+id/cb_1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="5dp"
              android:paddingEnd="5dp"
              android:layout_marginTop="5dp"
              android:checked="true"
              android:button="@drawable/bg_cb"
              android:text="@string/cb_android"
              android:textSize="16sp"
              android:layout_below="@id/tv_skill"/>

    <CheckBox android:id="@+id/cb_2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="5dp"
              android:paddingEnd="5dp"
              android:layout_marginTop="5dp"
              android:button="@drawable/bg_cb"
              android:text="@string/cb_ios"
              android:textSize="16sp"
              android:layout_below="@id/cb_1"/>

    <CheckBox android:id="@+id/cb_3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="5dp"
              android:paddingEnd="5dp"
              android:layout_marginTop="5dp"
              android:button="@drawable/bg_cb"
              android:text="@string/cb_h5"
              android:textSize="16sp"
              android:layout_below="@id/cb_2"/>

</RelativeLayout>