<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".view.ToastActivity">

    <Button android:id="@+id/btn_toast_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_toast_1"/>

    <Button android:id="@+id/btn_toast_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_toast_2"
            app:layout_constraintTop_toBottomOf="@id/btn_toast_1"/>

    <Button android:id="@+id/btn_toast_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_toast_3"
            app:layout_constraintTop_toBottomOf="@id/btn_toast_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>