<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:orientation="horizontal">

    <ImageView android:id="@+id/iv_left"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:background="@color/colorBlack"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="100dp"
                  android:layout_marginStart="10dp"
                  android:orientation="vertical">

        <TextView android:id="@+id/tv_title"
                  android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:text="@string/lv_title"
                  android:textSize="16sp"
                  android:textColor="@color/colorBlack"
                  android:gravity="top"
                  android:layout_weight="1"/>

        <TextView android:id="@+id/tv_time"
                  android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:text="@string/lv_time"
                  android:textSize="16sp"
                  android:gravity="center"
                  android:layout_weight="1"/>

        <TextView android:id="@+id/tv_content"
                  android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:text="@string/lv_content"
                  android:textSize="16sp"
                  android:gravity="bottom"
                  android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>